# p1.1_chenst_shaoym1

./: .gitignore  CMakeLists.txt  autolab.txt  translator.c  translator.h
src/: compression.c  compression.h  utils.c  utils.h
test/: test.py
test/in/stype/: readme_1.txt
test/ref/ujtype/: ref_1.s
